# CppProjectSetup

./: README.md  setup.sh
files/: CMakeLists.txt  conanfile.txt
